--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@
     font-family: 'Poppins', sans-serif;
     margin:30PX 25PX;
     padding: 0;
+    background-color: rgb(240, 234, 234);
     text-decoration: none;
 }
+/* introduction section start */
 section{
     display: flex;
 }
+
 .introduction-area{
     width: 50%;
 }
@@ -15,6 +18,23 @@ section{
 }
 
 h1{
-    font-size: 30px;
     font-size: 50px;
+    font-weight: 1200;
+    color: rgba(49, 46, 46, 0.788);
+}
+.h1-font-orng{
+    color: darkorange;
+} 
+/* my name */
+.name{
+    font-size: 35px ;
+    font-weight: 900;
+}
+/* button area */
+.button{
+    background-image: linear-gradient(tomato , orange);
+    color: whitesmoke; 
+    font-weight: 600;
+    padding: 3%;
+    border-radius: 10px;
 }
