--- a/style.css
+++ b/style.css
@@ -74,13 +74,13 @@ h1{
 
 /* dream-vission-goals area */
 #half-area-color1{
-    background-image: linear-gradient(rgb(243, 138, 155) ,white);
+    background-image: linear-gradient(rgb(243, 199, 206) ,white);
 }
 #half-area-color2{
-    background-image: linear-gradient(rgb(81, 216, 81) ,white);
+    background-image: linear-gradient(rgb(187, 240, 187) ,white);
 }
 #half-area-color3{
-    background-image: linear-gradient(rgb(85, 85, 197) ,white);
+    background-image: linear-gradient(rgb(179, 179, 236) ,white);
 }
 
 .half-width-area img{
@@ -107,14 +107,30 @@ h1{
 #about-box{
     background-image: url(images/about-us-icon-34420-white.png);
     background-repeat: no-repeat;
-    background-position:100px 160px;
+    background-position:160px 160px;
     
+}
+#form-box{
+    display: flex;
+    flex-direction: column;
+   
+}
+
+.form{
+    margin: 0;
+    margin-bottom: 25px;
+    padding: 5px;
+    border: 1px solid black;
+    background-color: rgb(201, 212, 231);
+    border-radius: 10px;
 }
 
 /* footer area */
 footer{
+    margin-bottom: 10px;
     text-align: center;
     background-color: rgb(78, 72, 72);
     color: white;
     padding: 1px;
+   margin: 0;
 }
